[package]
name = "flume_water_exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow             = "^1.0"
console-subscriber = "0.1.0"
chrono             = "0.4"
chrono-tz          = "0.6"
env_logger         = "0.9"
lazy_static        = "^1.4"
log                = "0.4"
prometheus         = "0.13.0"
prometheus-hyper   = "0.1.3"
reqwest            = { version = "0.11", features = ["blocking"] }
serde              = { version = "^1.0", features = ["derive"] }
serde_json         = "^1.0"
tokio              = { version = "^1.15", features = ["full", "tracing"] }
toml               = "0.5.8"

